# SELE_Regularization

./: .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  requirements.txt
.dvc/: config
AI/: CONTEXT.md  GENERIC_GUIDELINES.md  ML_DIRECTION.md  TV_DIRECTION.md
Data/: ELE.csv  ELE_sim.csv  G_matrix.csv  G_score_model.csv  SELE_ground_truth.csv  k.csv  n_k_wavelength_nm.csv  score_model_curve.csv  sele_score_model_curve.csv  wavelength_nm.csv  z.csv  z_mesh.csv
Data/score_model/: .gitignore  alon_sele_score_net_d32.pt.dvc  datasets.dvc  models.dvc  sele_dataset.csv  sele_score_model_curve.csv  sele_score_net_d32.pt.dvc  sele_score_net_d32_100k.pt.dvc  sele_score_net_d500.pt.dvc  sele_simulated_100000_curves_32_long.mat.dvc  sele_simulated_100000_curves_500_long.mat.dvc  sele_simulated_1000_curves_500_long.mat.dvc
MATLAB SELE Simulation/: Fresnel.m  Incident_wavelength_dependent_PL.mat  Plot_Sp.m  calc_Sp2.m  calc_Sp2_single_wavelength.m  create_training_set.m  optical_constnats_w_wo_Drude.mat
Utils/: greek letters.txt  math symbols.txt  pickle_save_load.py  print_files.py  sele-score-model-training-script.py  sele_w_score_optimization_example.py
results/: S_mean.csv  S_std.csv  eta_fit.csv  run_report.txt
results/raw/: G_new.csv  S_mean.csv  S_std.csv  dz_new.csv  eta_fit.csv  z_new.csv
results/tuning/: SELE results.txt
src/: __init__.py  debug.py  interpolation_validation.py  io.py  main.py  mesh.py  operators.py  pipeline.py  plotting.py  remesh.py  sele_w_score_optimization_example.py  tikhonov.py  utils.py
src/types/: config.py  (+3 more)
(+43 files in other folders)
